# seegfx

./: .licenserc.json  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml  format-check.yml  triage.yml
cmake/: MetalConfig.cmake  ios.toolchain.cmake
src/: seegfx.cpp
